--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@
 
 html {
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.wrapper {
-  color: white;
   justify-content: center;
   text-align: center;
 }
@@ -59,6 +55,7 @@ h4 {
   display: grid;
   grid-template-columns: repeat(20, 1fr) 35px;
   grid-template-rows: repeat(20, 1fr) 50px;
+  color: white;
 }
 
 /* Default border thickness for all rectangles. */
@@ -257,4 +254,8 @@ h4 {
   grid-column: span 5;
   grid-row: span 1;
   border-bottom: 1px solid var(--darker-gray);
+}
+
+.color-palette {
+  display: none;
 }
